--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						font-family: Montserrat, sans-serif;
 					"
 				>
-					skills
+					Skills
 				</h1>
 				<p
 					style="
@@ -243,23 +243,23 @@
 				<br />
 				<div class="spaceBetweenRow">
 					<div class="container3">
-						<p style="display: block; text-align: center">3+</p>
+						<p style="display: block; text-align: center" id="pataners">0+</p>
 						<p style="display: block; text-align: center">Partners</p>
 					</div>
 					<div class="container3">
-						<p style="display: block; text-align: center">9+</p>
+						<p style="display: block; text-align: center" id="project" >0+</p>
 						<p style="display: block; text-align: center">Project</p>
 					</div>
-					<div class="container3">
+					<!-- <div class="container3">
 						<p style="display: block; text-align: center">9+</p>
 						<p style="display: block; text-align: center">Happy Client</p>
-					</div>
+					</div> -->
 					<div class="container3">
-						<p style="display: block; text-align: center">10+</p>
+						<p style="display: block; text-align: center" id="meeting">0+</p>
 						<p style="display: block; text-align: center">Meting</p>
 					</div>
 				</div>
-				<button
+				<!-- <button
 					id="resumeDownloadBtn"
 					style="
 						width: 200px;
@@ -269,7 +269,7 @@
 					"
 				>
 					Download Resume
-				</button>
+				</button> -->
 				<br />
 				<br />
 				<h1
@@ -282,7 +282,7 @@
 						font-family: Montserrat, sans-serif;
 					"
 				>
-					Projects
+				Lastest	Projects
 				</h1>
 				<div
 					class="spaceBetweenRow"
@@ -370,7 +370,7 @@
 						<p
 							style="display: block; font-size: 18px; color: rgb(122, 122, 122)"
 						>
-							naymyo1310mdy@gmail.com
+							<!-- naymyo1310mdy@gmail.com -->
 						</p>
 					</div>
 				</div>
@@ -404,7 +404,7 @@
 						<p
 							style="display: block; font-size: 18px; color: rgb(117, 117, 117)"
 						>
-							thwinhtoo118@gmail.com
+							<!-- thwinhtoo118@gmail.com -->
 						</p>
 					</div>
 				</div>
@@ -439,7 +439,7 @@
 							style="display: block; font-size: 18px; color: rgb(117, 117, 117)"
 						>
 							<!-- No one is better than John Doe. . -->
-							saipaing177@gmail.com
+							<!-- saipaing177@gmail.com -->
 						</p>
 					</div>
 				</div>
@@ -505,7 +505,7 @@
 					</div>
 				</div> -->
 				<!-- <br /> -->
-				<h2>Content Me</h2>
+				<h2 id="Contact">Contact Me</h2>
 				<div
 					class="line"
 					style="margin-bottom: 20px"
