--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 						<h3>Mandalar Second</h3>
 						<p>Customer to Customer Shoping</p>
 						<a
-							href="project1.html"
+							href="https://github.com/AmraNK9/Mandalar-Second"
 							class="btn"
 							>Learn More</a
 						>
@@ -309,7 +309,7 @@
 						<h3>Neon Book Reviews</h3>
 						<p>Social Media Platforms for Book Lovers</p>
 						<a
-							href="project1.html"
+							href="https://github.com/AmraNK9/Book-Review-System.git"
 							class="btn"
 							>Learn More</a
 						>
