--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="sideNavImgWrapper">
 				<img
 					class="sideNavImg"
-					src="https://www.w3schools.com/w3images/man_smoke.jpg"
+					src="img/pofolio2-transformed (1).png"
 					alt=""
 				/>
 			</div>
@@ -87,7 +87,7 @@
 				<p class="subHeader typing-animation"></p>
 				<div class="imageWrapper">
 					<img
-						src="https://www.w3schools.com/w3images/man_smoke.jpg"
+						src="img/pofolio2-transformed (1).png"
 						style="width: 100%; height: 80%"
 						alt="jon Doe"
 					/>
